# pyramid-client-builder

./: .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tox.toml
.cursor/rules/: dev-workflow-trigger.mdc  pre-pr-check.mdc  python-conventions.mdc
.cursor/skills/dev-workflow/: .managed-skill.md  SKILL.md
.cursor/skills/fix-bug/: .managed-skill.md  SKILL.md
.cursor/skills/lint-format/: SKILL.md
.cursor/skills/run-tests/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
cli-reference/: index.html
development/: index.html
docs/: cli-reference.md  development.md  features.md  generated-output.md  getting-started.md  index.md  usage.md
features/: index.html
generated-output/: index.html
getting-started/: index.html
knowledge/: architecture.md  concepts.md  decisions.md
search/: search_index.json
src/pyramid_client_builder/: __init__.py  cli.py  introspection.py  models.py  version.py
src/pyramid_client_builder/generator/: __init__.py  common.py  core.py  flutter_core.py  flutter_naming.py  go_core.py  go_naming.py  naming.py  renderer.py
src/pyramid_client_builder/generator/flutter_templates/: README.md.j2  pubspec.yaml.j2
src/pyramid_client_builder/generator/flutter_templates/lib/: {{package_name}}.dart.j2
src/pyramid_client_builder/generator/flutter_templates/lib/src/: client.dart.j2  models.dart.j2
src/pyramid_client_builder/generator/flutter_templates/lib/src/@each(versions)/: client.dart.j2  models.dart.j2
src/pyramid_client_builder/generator/go_templates/: README.md.j2  client.go.j2  go.mod.j2  types.go.j2
src/pyramid_client_builder/generator/go_templates/@each(versions)/: client.go.j2  types.go.j2
src/pyramid_client_builder/generator/python_templates/{{package_name}}/: client.py.j2  fields.py.j2  schemas.py.j2
src/pyramid_client_builder/generator/python_templates/{{package_name}}/@each(versions)/: client.py.j2  schemas.py.j2
src/pyramid_client_builder/generator/templates/: README.md.j2  __init__.py.j2  client.py.j2  ext.py.j2  pyproject.toml.j2  root_client.py.j2  schemas.py.j2  version_client.py.j2
src/pyramid_client_builder/generator/templates/@each(versions)/: __init__.py.j2
src/pyramid_client_builder/generator/templates/{{package_name}}/: client.py.j2
src/pyramid_client_builder/generator/templates/{{package_name}}/@each(versions)/: __init__.py.j2  schemas.py.j2
src/pyramid_client_builder/introspection/: __init__.py  core.py  cornice.py  routes.py
tests/: conftest.py  test_cli.py  test_flutter_generator.py  test_flutter_naming.py  test_generator.py  test_go_generator.py  test_go_naming.py  test_introspection.py  test_models.py  test_naming.py  test_pyramid_client_builder.py  test_smoke.py
tests/example_app/: __init__.py  example.ini  predicates.py  routes.py  schemas.py  views.py
usage/: index.html
