[project]
name = "pyramid-client-builder"
version = "0.1.0"
description = "Introspect Pyramid views and generate a client for the app"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyramid_client_builder"]

[tool.ruff]
src = ["src"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "TCH"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = ["ruff", "black", "pytest", "mkdocs-material"]
