[project]
name = "pyramid-client-builder"
dynamic = ["version"]
description = "Introspect Pyramid views and generate an HTTP client for the app"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pyramid-introspector[cornice]",
    "click>=8.0",
    "jinja2>=3.0",
    "requests>=2.28",
    "nltk>=3.8",
]

[project.scripts]
pclient-build = "pyramid_client_builder.cli:pclient_build"

[project.entry-points."paste.app_factory"]
example = "tests.example_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/pyramid_client_builder/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pyramid_client_builder", "tests"]

[tool.ruff]
src = ["src"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "TCH"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "ruff",
    "black",
    "pytest",
    "mkdocs-material",
    "webtest",
    "cornice",
    "marshmallow",
    "tox",
    "tox-uv>=1.25",
]
